@@ -41,6 +41,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4265: shutil.copyfile() was leaking file descriptors when disk fills.
+  Patch by Tres Seaver.
+
 - Issue #7755: Use an unencumbered audio file for tests.
 
 - Issue #8621: uuid.uuid4() returned the same sequence of values in the
